css/style.css
/* ... */
.emailContainer .checkMarketing .checkHolder .holderThing .fa-check {
  margin-top: 8px;
  opacity: 0;
}
.emailContainer .checkMarketing .checkHolder input {
  position: absolute;
  z-index: 12;
  opacity: 0;
  width: 2em;
  height: 2em;
}
.emailContainer .checkMarketing .checkHolder input:hover {
  cursor: pointer;
}
.emailContainer .checkMarketing .checkHolder input:checked {
  background-color: #333645;
  color: white;
  border: none;
}
.emailContainer .checkMarketing .checkHolder input:checked ~ .holderThing {
  background-color: #333645;
  color: white;
  border: none;
}
.emailContainer .checkMarketing .checkHolder input:checked ~ .holderThing .fa-check {
  opacity: 1;
  color: white;
}
.emailContainer .checkMarketing label {
  font-size: 1rem;
  font-weight: 500;
  margin-left: 8px;
}
.emailContainer .btn {
  margin-top: 32px;
  background: #333645;
  color: white;
  height: 3em;
}
.emailContainer .btn:hover {
  background: #1d1f28;
}

.mainFooterBG {
  background: #333645;
  padding: 16px;
  color: white;
}

.footerContainer {
  padding: 48px 0;
}
.footerContainer .row {
  margin: 0;
}
.footerContainer h4 {
  margin-top: 16px;
  margin-bottom: 24px;
  font-size: 1em;
  font-weight: 400;
}
.footerContainer .col-12 {
  padding: 0;
}
.footerContainer ul {
  list-style: none;
  padding: 0 0;
}
.footerContainer a {
  color: white;
  text-decoration: none;
}
.footerContainer a:hover {
  text-decoration: underline;
}
.footerContainer li {
  padding: 2px 0;
  font-size: 0.8em;
  font-weight: 400;
}
.footerContainer i {
  background: #1d1f28;
  width: 100%;
  text-align: center;
  font-size: 2em;
  padding: 0.5em 1em;
}
.footerContainer .row > * {
  padding: 24px;
  padding-left: 0;
  padding-top: 0;
  padding-right: 12px;
}
.footerContainer .row > .col-6:nth-child(2) {
  padding-left: 12px;
  padding-right: 0;
}
.footerContainer .socialMediaContainer {
  padding: 0;
}

.socialMedia-fb:hover i {
  background: #4267B2;
}

.socialMedia-twitter:hover i {
  background: #1DA1F2;
}

.socialMedia-li:hover i {
  background: #2867b2;
}

.awardsContainer {
  margin-top: 32px;
  margin-bottom: 32px;
}
.awardsContainer .greyImage > img:last-of-type {
  display: none;
}
.awardsContainer .greyImage:hover > img:first-of-type {
  display: none;
}
.awardsContainer .greyImage:hover > img:last-of-type {
  display: block;
}
.awardsContainer img {
  max-width: 100%;
  display: block;
  margin: 0 auto;
}
.awardsContainer .row {
  margin-top: 16px;
}

/*# sourceMappingURL=style.css.map */

